# load_balancer

./: .gitignore  Dockerfile  LINKEDIN_POST.md  README.md  expose_local.sh  index.html  index_neon.html  load_generator.py  mock_server.py  pyproject.toml  render.yaml  requirements.txt  restart_lb.sh  run_demo.sh  start_all.sh  start_render.sh  vercel.json  visualizer.py  web_server.py
api/: run_test.py  scan.py  stats.py
public/: index.html
src/main/java/com/loadbalancer/: AdaptiveStrategy.java  BackendServer.java  ClientHandler.java  ConsistentHashStrategy.java  CustomStrategy.java  HealthCheckService.java  LoadBalancer.java  LoadBalancingStrategy.java  PortScanner.java  RoundRobinStrategy.java
