[project]
name = "load_balancer"
version = "0.1.0"
description = "Advanced Load Balancer Dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.hatch.build.targets.sdist]
include = [
    "/*.py",
    "api/**/*.py",
    "index.html",
    "public/**/*"
]
